# SaddlePoint-SchurPETSc-FreeFEM

./: README.md
poisson_sp_problem/FreeFEM/: poisson.edp
poisson_sp_problem/MATLAB/: matlab_poisson_saddle_solver.m
poisson_sp_problem/PETSc/: CMakeLists.txt  PETSCMatUtilities.cpp  PETSCMatUtilities.hpp  PETSCSolveUtilities.cpp  PETSCSolveUtilities.hpp  main.cpp
stokes_sp_problem/FreeFEM/: stokes.edp
stokes_sp_problem/PETSc/: CMakeLists.txt  PETSCMatUtilities.cpp  PETSCMatUtilities.hpp  PETSCSolveUtilities.cpp  PETSCSolveUtilities.hpp  main.cpp
